crates/mail-templates/tests/snapshots/templates__branded-sign-in.html.snap
---
source: crates/mail-templates/tests/templates.rs
expression: email.html
---
<!doctype html><html lang="en" dir="ltr" xmlns="http://www.w3.org/1999/xhtml"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="x-apple-disable-message-reformatting"><meta name="format-detection" content="telephone=no,address=no,email=no,date=no,url=no"><meta name="color-scheme" content="light dark"><meta name="supported-color-schemes" content="light dark"><title>Sign in to Acme</title><style>body{margin:0!important;padding:0!important;width:100%!important}a[x-apple-data-detectors]{color:inherit!important;text-decoration:none!important}@media (max-width:620px){.cf-outer{padding:20px 12px!important}.cf-card{padding:28px 20px!important}.cf-h1{font-size:22px!important;line-height:28px!important}}@media (max-width:480px){.cf-fact-l{display:block!important;width:auto!important;padding:0 0 2px!important}.cf-fact-v{display:block!important;padding:0 0 12px!important}}@media (prefers-color-scheme:dark){.cf-bg{background:#09090B!important}.cf-card{background:#18181B!important;border-color:#27272A!important}.cf-ink{color:#FAFAFA!important}.cf-text{color:#D4D4D8!important}.cf-mut{color:#A1A1AA!important}.cf-code{background:#09090B!important;color:#FAFAFA!important;border-color:#27272A!important}.cf-rule{border-color:#27272A!important}.cf-btn{background:#F4B63F!important}.cf-btn-a{color:#0E1526!important}.cf-link{color:#FAFAFA!important}}</style>
</head>
<body class="cf-bg" style="margin:0;padding:0;background:#F5F6F8;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%"><div style="display:none;max-height:0;max-width:0;overflow:hidden;opacity:0;mso-hide:all;font-size:1px;line-height:1px;color:#F5F6F8">This link works once, for 15 minutes. If you didn&#39;t ask for it, ignore this email.&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;&#847;&zwnj;&nbsp;</div>
<table role="presentation" class="cf-bg" width="100%" cellpadding="0" cellspacing="0" border="0" style="background:#F5F6F8;border-collapse:collapse"><tr>
<td class="cf-outer" align="center" style="padding:32px 16px"><!--[if mso]><table role="presentation" width="600" cellpadding="0" cellspacing="0" border="0"><tr>
<td><![endif]--><table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0" style="max-width:600px;border-collapse:separate"><tr>
<td style="padding:0 4px 20px"><a href="https://acme.test/" style="text-decoration:none;color:#0E1526"><table role="presentation" cellpadding="0" cellspacing="0" border="0"><tr>
<td width="32" height="32" bgcolor="#0E1526" style="width:32px;height:32px;background:#0E1526;border-radius:8px;"><img src="https://acme.test/assets/email/logo-64.png" width="32" height="32" alt="Acme" style="display:block;width:32px;height:32px;border:0;outline:none;text-decoration:none;color:#0E1526;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:12px;line-height:32px;font-weight:700"></td><td class="cf-ink" style="padding-left:10px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:20px;line-height:32px;font-weight:700;letter-spacing:-0.5px;color:#0E1526">acme</td></tr>
</table></a></td></tr>
<tr>
<td class="cf-card" bgcolor="#FFFFFF" style="background:#FFFFFF;border:1px solid #E4E4E7;border-radius:12px;padding:36px 40px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif"><h1 class="cf-h1 cf-ink" style="margin:0 0 16px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:26px;line-height:32px;font-weight:700;letter-spacing:-0.4px;color:#0E1526">Sign in to Acme</h1>
<p class="cf-text" style="margin:0 0 20px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:16px;line-height:24px;color:#3F3F46">Use the button below to sign in to Acme.</p>
<table role="presentation" cellpadding="0" cellspacing="0" border="0" style="margin:4px 0 24px"><tr>
<td class="cf-btn" bgcolor="#0E1526" style="border-radius:8px;background:#0E1526"><a class="cf-btn-a" href="https://api.acme.test/v1/auth-magic-link/consume?token=Jx3mQ9vT0cWb8nL2kPz7rY5sHd1fGa4e" target="_blank" rel="noopener" style="display:inline-block;padding:14px 24px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:16px;line-height:20px;font-weight:700;color:#FFFFFF;text-decoration:none;border-radius:8px">Sign in</a></td></tr>
</table><p class="cf-mut" style="margin:0 0 6px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:14px;line-height:20px;color:#71717A">Or paste this link into your browser:</p>
<p style="margin:0 0 24px;font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;font-size:13px;line-height:20px;word-break:break-all;overflow-wrap:anywhere"><a class="cf-link" href="https://api.acme.test/v1/auth-magic-link/consume?token=Jx3mQ9vT0cWb8nL2kPz7rY5sHd1fGa4e" style="color:#B7791F;text-decoration:underline">https://api.acme.test/v1/auth-magic-link/consume?token=Jx3mQ9vT0cWb8nL2kPz7rY5sHd1fGa4e</a></p>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" border="0"><tr>
<td class="cf-rule" style="border-top:1px solid #E4E4E7;padding-top:20px"><p class="cf-mut" style="margin:0 0 8px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:14px;line-height:21px;color:#71717A">This link works once and expires in 15 minutes.</p>
<p class="cf-mut" style="margin:0 0 8px;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:14px;line-height:21px;color:#71717A">If you didn&#39;t ask to sign in, ignore this email: nobody can use the link without opening it, and it expires on its own.</p>
</td></tr>
</table></td></tr>
<tr>
<td class="cf-mut" style="padding:24px 8px 0;font-family:Satoshi,-apple-system,'Segoe UI',sans-serif;font-size:13px;line-height:20px;color:#71717A"><p style="margin:0 0 6px">Sent to ada@example.com because someone asked to sign in to Acme with this address.</p>
<p style="margin:0 0 6px">Acme Ltd, 1 Example Road, Testville</p>
<p style="margin:0">Acme &middot; <a class="cf-mut" href="https://acme.test/" style="color:#71717A;text-decoration:underline">acme.test</a> &middot; <a class="cf-mut" href="mailto:hello@acme.test" style="color:#71717A;text-decoration:underline">hello@acme.test</a></p>
</td></tr>
</table><!--[if mso]></td></tr>
</table><![endif]--></td></tr>
</table></body></html>
